# lectures-filter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  ipython_startup.py  justfile  pyproject.toml  result.ics  u111784.ics
.copier/: .copier-answers.copier-python-project.yml
.github/workflows/: lint-and-test.yml
examples/: u111784.json
lectures_filter/: calendar_managing.py  common.py  config.py  filtering.py  main.py  user_config.py
lectures_filter/clients/: s3.py  usos.py
src/: calendar_managing.py  lambda_function.py
tests/: conftest.py  test_calendar_managing.py  test_filtering.py  test_lectures_filter.py  test_main.py
