[project]
name = "lectures-filter"
version = "0.1.0"
description = "AWS Lambda code that fetches .ics calendar and removes all lectures from it :)."
authors = [{ name = "Piotr Karaś", email = "pepe500p@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "aws-lambda-powertools>=3.16.0,<4",
    "boto3>=1.39.3,<2",
    "botocore>=1.39.3",
    "icalendar>=6.3.1,<7",
    "pydantic>=2.11.7,<3",
    "pydantic-settings>=2.10.1,<3",
    "requests>=2.32.4,<3",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "copier>=9.7.1,<10",
    "fawltydeps>=0.20,<0.21",
    "flake8>=7.3.0,<8",
    "flake8-pyproject>=1.2.3,<2",
    "freezegun>=1.5.2,<2",
    "ipython>=9.4.0,<10",
    "isort[colors]>=6.0.1,<7",
    "mypy>=1.16.1,<2",
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
    "pytest-mock>=3.14.1,<4",
    "types-boto3[s3]>=1.39.3,<2",
    "types-requests>=2.32.4.2025061,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.fawltydeps.custom_mapping]
types-boto3 = ["types_boto3_s3"]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
omit = ["*test*"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError()",
]

[tool.fawltydeps]
code = ["lectures_filter"]
deps = ["pyproject.toml"]
ignore_unused = [
    # Dev dependencies. This list should contain ALL of them!
    "black",
    "copier",
    "fawltydeps",
    "flake8",
    "flake8-pyproject",
    "freezegun",
    "ipython",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.flake8]
# S101 == Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
# W503 == line break before binary operator. Conflicts with W504 - line break after binary operator.
# A003 == . Conflicts with W504 - line break after binary operator.
# E203 == whitespace before ':' Conflicts with black
ignore = ['S101', 'W503', 'A003', 'E203']
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120
order_by_type = false
known_first_party = ["lectures_filter"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_traceback = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers --cov=. --cov-fail-under=60.0 --cov-config=.coveragerc"
pythonpath = ["."]
